missed a few characters, which were showing up as spaces

--- a/casestudies/124/casestudy/www/layout/case_id_124_id_855.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_855.html
@@ -233,7 +233,7 @@ font-style:italic;
            Norway says no.
           </em>
          </strong>
-         The surprises were not over. In December, CSI had reapplied to Norway for another year's funding. But on March 22, UNEP's Morton e-mailed with bad news: Norway was slashing the CSI budgeta signal it would not renew. Apparently, it was no longer interested in multi-sector investments but preferred instead to fund a series of small-scale hydroelectric projects.
+         The surprises were not over. In December, CSI had reapplied to Norway for another year's funding. But on March 22, UNEP's Morton e-mailed with bad news: Norway was slashing the CSI budget' &mdash; a signal it would not renew. Apparently, it was no longer interested in multi-sector investments but preferred instead to fund a series of small-scale hydroelectric projects.
         </p>
         <p>
          Wah and her colleagues had felt apprehensive for several months about the Norwegian commitment. Over its year of involvement, Norway had sent various representatives to discuss CSI, and each had brought a different perspective, recalls Wah. For example, one representative talked about taking a human-rights based approach to development. "No one knew what that really meant on the ground," she says. In mid-February 2012, Joel Boutroue, a Frenchman representing Norway's interests in the project, expressed concern that CSI didn't have an exit strategy. "Well, the exit strategy was for the government to take it over," notes Wah.
