--- a/casestudies/124/casestudy/www/layout/case_id_124_id_856.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_856.html
@@ -216,7 +216,7 @@ font-style:italic;
          The Norwegian decision set off a scramble to find alternative funding. First, Earth Institute Director Sachs approached top officials in the Norwegian government, to no avail. For their part, Wah, Levy and Fischer approached multiple potential funders: the Clinton-Bush Haiti Fund, the Red Cross, Mercy Corps, the European Union, and the governments of France, Italy, Spain, Germany and Qatar.
         </p>
         <p>
-         In response to the immense challenges in Haiti, international aid donors had informally divided the country geographically and directed their investments to specific territories, says Wah. Norway had adopted the orphan region in the south around Port-à-Piment, and it was difficult to entice other nations to invest there. Other funders typically focused on one sector and didnt support a multi-sector approach. Most of all, funders repeatedly wanted quick-wins: projects with immediate results and short time frames.
+         In response to the immense challenges in Haiti, international aid donors had informally divided the country geographically and directed their investments to specific territories, says Wah. Norway had adopted the orphan region in the south around Port-à-Piment, and it was difficult to entice other nations to invest there. Other funders typically focused on one sector and didn't support a multi-sector approach. Most of all, funders repeatedly wanted "quick-wins": projects with immediate results and short time frames.
         </p>
         <p>
          Discouraged but not defeated, Wah stepped up efforts to redirect the IDB funds to the Port-à-Piment project. The Ministry of Agriculture was in charge of disbursing the IDB monies. Wah knew Agriculture Minister Hebert Docteur and was confident she could secure his support. On Sunday, March 25, 2012, the Earth Institute team made a presentation to Minister Docteur and his staff in Port-au-Prince which included a 3D model of the Port-à-Piment watershed. He "absolutely loved the idea," Wah says. "It was the first integrated approach to deal with watershed management that he had ever seen."
@@ -232,7 +232,7 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Later that same day, Docteur put in a formal request to Minister of Finance André Lemercier Georges, who chaired the HRF steering committee, for $14 million to be allocated to Port-à-Piment watershed project. The next step was to persuade Lermercier Georges to sign off on the reallocation. Five days later, on March 30, the Haiti Reconstruction Fund steering committee met. Wah was the representative for the prime minister's office. At the meeting, Norways representative, Eva Tuft, told Wah that Norway no longer wanted to fund a Millennium Village in Haiti nor would it approve reallocation of the IDB funds to the Port-à-Piment watershed project  unless the Haitian ministries of finance and agriculture requested it directly. "The Norwegians didnt want [IDB funding] going to this project," says Fischer. "I never heard any specific substantive reasons why they were so opposed to it."
+         Later that same day, Docteur put in a formal request to Minister of Finance Andr&eacute; Lemercier Georges, who chaired the HRF steering committee, for $14 million to be allocated to Port-à-Piment watershed project. The next step was to persuade Lermercier Georges to sign off on the reallocation. Five days later, on March 30, the Haiti Reconstruction Fund steering committee met. Wah was the representative for the prime minister's office. At the meeting, Norway's representative, Eva Tuft, told Wah that Norway no longer wanted to fund a Millennium Village in Haiti nor would it approve reallocation of the IDB funds to the Port-à-Piment watershed project  unless the Haitian ministries of finance and agriculture requested it directly. "The Norwegians didn't want [IDB funding] going to this project," says Fischer. "I never heard any specific substantive reasons why they were so opposed to it."
         </p>
         <div style="float:right;padding:10px">
          <img src="../../files/photos/828/PaPim_Maps and Model.JPG" style="height: 300px; width: 400px;"/>
@@ -260,7 +260,7 @@ font-style:italic;
           </em>
           .
          </strong>
-         Then on May 4, as the Port-à-Piment team fought to secure the IDB funding, Haitian President Michel Martelly finally appointed a new government; Laurent Lamothe would be prime minister. Within a week, Finance Minister Lemercier Georges and Agriculture Minister Docteur were out of office. "Although I had great relations with the director of the Haitian Reconstruction Fund, without the minister of finances signature I couldnt go the next step," says Wah.
+         Then on May 4, as the Port-à-Piment team fought to secure the IDB funding, Haitian President Michel Martelly finally appointed a new government; Laurent Lamothe would be prime minister. Within a week, Finance Minister Lemercier Georges and Agriculture Minister Docteur were out of office. "Although I had great relations with the director of the Haitian Reconstruction Fund, without the minister of finance's signature I couldn't go the next step," says Wah.
         </p>
         <p>
          The clock was ticking. The project continued to spend down its original funds while expanding service delivery and building relationships. If new funds were not in place by June, the project would run out of money to pay staff. That would mean the end of the original CSI. The new minister of finance, Marie Carmelle Jean-Marie, took office on May 16. Wah had worked with her, and was confident that she would support the reallocation of IDB funds. But as with all incoming ministers, she confronted a wide range of requests, obligations and pressure from multiple parties.
@@ -269,7 +269,7 @@ font-style:italic;
          The Earth Institute had managed projects across the world, including in some of the most difficult settings in Africa. Yet this one posed challenges that confounded even its expectations. Was it possible for a development project targeting complex, interconnected social, enviromental and economic issues to function in such a fragile political context? With numerous lessons learned and an emerging body of best practices for aid, how could donors repeat the mistakes that the original Haiti Regeneration Initiative concept note had identified?
         </p>
         <p>
-         Could Wah and the Port-à-Piment supporters convince the international donor community of the merits and secure funding in such a short time frame? Or could Wah get the required government signatures and file the paperwork to secure the IDB funding in time? Even if she got the money, what would the Port-à-Piment project's future be without support from the United Nations? How couldthe team find a way to continue a project that had finally won local buy-in, that would provide the first concrete example of implementing Millenium Development Goals in Haiti, and that promised to be a model for Haitis future development?
+         Could Wah and the Port-à-Piment supporters convince the international donor community of the merits and secure funding in such a short time frame? Or could Wah get the required government signatures and file the paperwork to secure the IDB funding in time? Even if she got the money, what would the Port-à-Piment project's future be without support from the United Nations? How couldthe team find a way to continue a project that had finally won local buy-in, that would provide the first concrete example of implementing Millenium Development Goals in Haiti, and that promised to be a model for Haiti's future development?
         </p>
         <div>
          <hr align="left" size="1" width="33%"/>
@@ -288,10 +288,10 @@ font-style:italic;
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_124_id_855.html" title="Go to previous page">
-          « Shifting politics and realities
+          &#171;&#160;Shifting politics and realities
          </a>
          <a class="page-next" href="case_id_124_id_857.html" title="Go to next page">
-          Appendix 1 »
+          Appendix 1&#160;&#187;
          </a>
         </div>
        </div>
@@ -311,17 +311,17 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_124_id_241_c_bio.html">
-         Tatiana Wah
+         Tatiana Wah
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_242_c_bio.html">
-         Marc Levy
+         Marc Levy
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_243_c_bio.html">
-         Alex Fischer
+         Alex Fischer
         </a>
        </li>
       </ul>
