--- a/casestudies/115/casestudy/www/layout/case_id_115_id_812.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_812.html
@@ -125,7 +125,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
+<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe &mdash; una breve historia</a>
 
 
 
@@ -347,7 +347,7 @@ font-style:italic;
 
 <a href="case_id_115.html" class="page-previous" title="Go to previous page">&#171;&#160;Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica</a>
 
-<a href="case_id_115_id_813.html" class="page-next" title="Go to next page">Boston Globe— una breve historia&#160;&#187;</a>
+<a href="case_id_115_id_813.html" class="page-next" title="Go to next page">Boston Globe &mdash; una breve historia&#160;&#187;</a>
 
 </div>
 </div></div>
