--- a/casestudies/115/casestudy/www/layout/case_id_115_id_814.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_814.html
@@ -125,7 +125,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
+<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe &mdash; una breve historia</a>
 
 
 
@@ -360,7 +360,7 @@ font-style:italic;
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
 
-<a href="case_id_115_id_813.html" class="page-previous" title="Go to previous page">&#171;&#160;Boston Globe— una breve historia</a>
+<a href="case_id_115_id_813.html" class="page-previous" title="Go to previous page">&#171;&#160;Boston Globe &mdash; una breve historia</a>
 
 <a href="case_id_115_id_815.html" class="page-next" title="Go to next page">Nace una investigación&#160;&#187;</a>
 
