--- a/casestudies/115/casestudy/www/layout/case_id_115_id_823.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_823.html
@@ -126,7 +126,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
+<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe &mdash; una breve historia</a>
 
 
 
