--- a/casestudies/115/casestudy/www/layout/case_id_115_id_813.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_813.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Boston Globe— una breve historia | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
+  <title>Boston Globe &mdash; una breve historia | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -77,7 +77,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>Boston Globe— una breve historia</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>Boston Globe &mdash; una breve historia</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -125,7 +125,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  class="active"  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
+<li class="leaf"><a  class="active"  href="case_id_115_id_813.html">Boston Globe &mdash; una breve historia</a>
 
 
 
@@ -318,7 +318,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">Boston Globe— una breve historia</h1>
+		<h1 class="title">Boston Globe &mdash; una breve historia</h1>
 		
 		
 		
