--- a/casestudies/115/casestudy/www/layout/case_id_115_id_826.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_826.html
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe'  una breve historia
+          Boston Globe &mdash; una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -222,7 +222,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_830.html">
-          ¿Publicar o hacer una pausa?
+          ï¿½Publicar o hacer una pausa?
          </a>
         </li>
        </ul>
@@ -395,7 +395,7 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="http://www.journalism.columbia.edu">
-         © 2012 Columbia University Graduate School of Journalism
+         ï¿½ 2012 Columbia University Graduate School of Journalism
         </a>
        </li>
       </ul>
