And a few more in case 115

--- a/casestudies/115/casestudy/www/layout/case_id_115_id_828.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_828.html
@@ -2,7 +2,7 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Potencial reacción | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
+   Potencial reacci&oacute;n | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Cat&oacute;lica
   </title>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -99,7 +99,7 @@ font-style:italic;
         <h1 class="site-name">
          <a href="case_id_115.html" title="Home">
           <span>
-           Potencial reacción
+           Potencial reacci&oacute;n
           </span>
          </a>
         </h1>
@@ -132,12 +132,12 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_812.html">
-          Introducción
+          Introducci&oacute;n
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston GlobeÂ— una breve historia
+          Boston Globe&mdash; una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -147,7 +147,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_815.html">
-          Nace una investigación
+          Nace una investigaci&oacute;n
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La Â“ciudad más católicaÂ”
+          La "ciudad m&aacute;s cat&oacute;lica"
          </a>
         </li>
         <li class="leaf">
@@ -177,7 +177,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_821.html">
-          El Globe y los católicos de Boston
+          El Globe y los cat&oacute;licos de Boston
          </a>
         </li>
         <li class="leaf">
@@ -212,7 +212,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a class="active" href="case_id_115_id_828.html">
-          Potencial reacción
+          Potencial reacci&oacute;n
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        <div class="content">
         <ul class="menu">
          <li class="printpdf">
-          <a href="../../files/global/115/Boston Globe y los Abusos Sexuales  en la Iglesia Católica_wm .pdf" target="_blank">
+          <a href="../../files/global/115/Boston Globe y los Abusos Sexuales  en la Iglesia Cat&oacute;lica_wm .pdf" target="_blank">
            Download this case as a PDF
           </a>
          </li>
@@ -254,7 +254,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Potencial reacción
+       Potencial reacci&oacute;n
       </h1>
       <div class="tabs">
       </div>
@@ -263,11 +263,11 @@ font-style:italic;
        </span>
        <div class="content">
         <p>
-         El Equipo Spotlight pasó octubre y comienzos de noviembre de 2001 reuniendo evidencia, entrevista a entrevista, documento a documento. Gradualmente, comenzó a distinguir las dimensiones de la historia. De hecho, los oscuros hechos representaban un desafío: parecía demasiado malo para ser verdad. Precisamente lo que la constituyó en una buena historia en el sentido periodístico la hacía más difícil de reportear y escribir. Si estaban impactados estos experimentados periodistas, ¿cómo reaccionaría el público? Dice Robinson:
+         El Equipo Spotlight pas&oacute; octubre y comienzos de noviembre de 2001 reuniendo evidencia, entrevista a entrevista, documento a documento. Gradualmente, comenz&oacute; a distinguir las dimensiones de la historia. De hecho, los oscuros hechos representaban un desaf&iacute;o: parec&iacute;a demasiado malo para ser verdad. Precisamente lo que la constituy&oacute; en una buena historia en el sentido period&iacute;stico la hac&iacute;a m&aacute;s dif&iacute;cil de reportear y escribir. Si estaban impactados estos experimentados periodistas, ¿c&oacute;mo reaccionar&iacute;a el p&uacute;blico? Dice Robinson:
         </p>
         <blockquote>
          <p>
-          Yo podría haber ido donde mis mejores amigos, que confían en mí implícitamente, y contarles la historia de lo que hizo Geoghan y lo que hizo la iglesia para encubrirlo, y no me hubiesen creído. Porque no puedes creer que una institución como la Iglesia Católica permitiría que se dañara tanto a los niños y por tantas décadas. Nadie lo creería. Nosotros no lo podíamos creer.
+          Yo podr&iacute;a haber ido donde mis mejores amigos, que conf&iacute;an en m&iacute; impl&iacute;citamente, y contarles la historia de lo que hizo Geoghan y lo que hizo la iglesia para encubrirlo, y no me hubiesen cre&iacute;do. Porque no puedes creer que una instituci&oacute;n como la Iglesia Cat&oacute;lica permitir&iacute;a que se da&ntilde;ara tanto a los ni&ntilde;os y por tantas d&eacute;cadas. Nadie lo creer&iacute;a. Nosotros no lo pod&iacute;amos creer.
          </p>
          <p>
           <i>
@@ -279,35 +279,35 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Aunque Baron no tenía una relación muy íntima con las comunidades católicas, estaba muy conciente del carácter explosivo de la noticia. Sabía, en primer lugar, que su propia religión podría convertirse en un tema: los críticos podrían señalar que había llegado un Â“editor judíoÂ” para inmediatamente lanzar una investigación sobre la iglesia. Baron agrega:
+         Aunque Baron no ten&iacute;a una relaci&oacute;n muy &iacute;ntima con las comunidades cat&oacute;licas, estaba muy conciente del car&aacute;cter explosivo de la noticia. Sab&iacute;a, en primer lugar, que su propia religi&oacute;n podr&iacute;a convertirse en un tema: los cr&iacute;ticos podr&iacute;an se&ntilde;alar que hab&iacute;a llegado un "editor jud&iacute;o" para inmediatamente lanzar una investigaci&oacute;n sobre la iglesia. Baron agrega:
         </p>
         <blockquote>
          <p>
-          Yo esperaba que hubiese una suerte de explosión de antipatía hacia el
+          Yo esperaba que hubiese una suerte de explosi&oacute;n de antipat&iacute;a hacia el
           <em>
            Globe
           </em>
-          , de sentir que, una vez más, el
+          , de sentir que, una vez m&aacute;s, el
           <em>
            Globe
           </em>
-          perseguía a la Iglesia Católica, y que no ganaríamos ningún amigo entre los católicos devotos.
+          persegu&iacute;a a la Iglesia Cat&oacute;lica, y que no ganar&iacute;amos ning&uacute;n amigo entre los cat&oacute;licos devotos.
          </p>
         </blockquote>
         <p>
-         El diario también estaba consciente del potencial impacto económico que la publicación de una noticia impactante pudiera tener, en una época de decreciente circulación e ingresos. Eso no significaba que suspenderían la publicación, pero Baron y sus colegas debían ser realistas. Â“Cuando [los diarios] están perdiendo lectores, hay una sensibilidad mayor hacia la posibilidad de molestar a una buena parte de la comunidad y hacer que cancelen sus suscripciones,Â” explica Baron.
+         El diario tambi&eacute;n estaba consciente del potencial impacto econ&oacute;mico que la publicaci&oacute;n de una noticia impactante pudiera tener, en una &eacute;poca de decreciente circulaci&oacute;n e ingresos. Eso no significaba que suspender&iacute;an la publicaci&oacute;n, pero Baron y sus colegas deb&iacute;an ser realistas. "Cuando [los diarios] est&aacute;n perdiendo lectores, hay una sensibilidad mayor hacia la posibilidad de molestar a una buena parte de la comunidad y hacer que cancelen sus suscripciones," explica Baron.
         </p>
         <p>
-         Bradlee afirma que había una Â“comprensión no verbalizadaÂ” entre los periodistas de que los riesgos eran inusualmente altos: estaban, a fin de cuentas, produciendo una historia que incriminaba a la institución más poderosa de la ciudad, una fuente de orgullo y consuelo para millones. Aunque los periodistas de Spotlight no podían prevenir una reacción hostil, podían tratar de minimizarla. Podrían reportear la historia de manera exhaustiva, utilizando documentación y fuentes identificadas donde fuera posible. Resolvieron hacer esfuerzos especiales por redactar de manera desapasionada y evitar utilizar lenguaje cargado y exageraciones, para que los críticos no encontraran ningún gancho en que colgarse para acusarlos de parcialidad. Â“Teníamos que hacer esta historia a prueba de balas,Â” dice Pfeiffer.
+         Bradlee afirma que hab&iacute;a una "comprensi&oacute;n no verbalizada" entre los periodistas de que los riesgos eran inusualmente altos: estaban, a fin de cuentas, produciendo una historia que incriminaba a la instituci&oacute;n m&aacute;s poderosa de la ciudad, una fuente de orgullo y consuelo para millones. Aunque los periodistas de Spotlight no pod&iacute;an prevenir una reacci&oacute;n hostil, pod&iacute;an tratar de minimizarla. Podr&iacute;an reportear la historia de manera exhaustiva, utilizando documentaci&oacute;n y fuentes identificadas donde fuera posible. Resolvieron hacer esfuerzos especiales por redactar de manera desapasionada y evitar utilizar lenguaje cargado y exageraciones, para que los cr&iacute;ticos no encontraran ning&uacute;n gancho en que colgarse para acusarlos de parcialidad. "Ten&iacute;amos que hacer esta historia a prueba de balas," dice Pfeiffer.
         </p>
        </div>
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_115_id_827.html" title="Go to previous page">
-          « Reportear tu cultura
+          &#171;&#160;Reportear tu cultura
          </a>
          <a class="page-next" href="case_id_115_id_829.html" title="Go to next page">
-          Rezendes recibe una pista »
+          Rezendes recibe una pista&#160;&#187;
          </a>
         </div>
        </div>
@@ -327,27 +327,27 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_115_id_230_c_bio.html">
-         Walter Robison
+         Walter Robison
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_115_id_231_c_bio.html">
-         Michael Rezendes
+         Michael Rezendes
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_115_id_232_c_bio.html">
-         Sacha Pfeiffer
+         Sacha Pfeiffer
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_115_id_233_c_bio.html">
-         Martin Baron
+         Martin Baron
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_115_id_234_c_bio.html">
-         Ben  Bradlee, Jr.
+         Ben  Bradlee, Jr.
         </a>
        </li>
       </ul>
